# issue_pydantic_inheritance_2_6_4

./: README.md  issue_pydantic.py  pyproject.toml
